--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shadcn-sidebar",
-  "version": "0.1.0",
+  "name": "next-cms",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
