--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +35,7 @@
     "react": "^18",
     "react-day-picker": "^9.0.6",
     "react-dom": "^18",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
